--- a/ProjectDiamondShop/Content/Introduce/Cushion.css
+++ b/ProjectDiamondShop/Content/Introduce/Cushion.css
@@ -3,12 +3,11 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Montserrat', sans-serif;
 }
 
 body {
-	background-color: #fff;
-	color: #333;
+	background-color: #222; /* Darker background color */
+	color: #e0e0e0; /* Text color */
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
@@ -19,19 +18,18 @@ main {
 }
 
 .navbar {
-	background: #fff !important;
+	background: #333 !important; /* Navbar background color */
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	padding: 0.5rem 1rem;
-	border-radius: 30px;
 	margin-bottom: 20px;
 	transition: top 0.3s;
 	margin: 0 auto;
-	max-width: 95%;
 }
 
 	.navbar .navbar-brand {
-		color: #28a745 !important;
+		color: #FFFF99 !important;
 		font-weight: bold;
+		font-family: "Playwrite ES Deco", cursive;
 		display: flex;
 		align-items: center;
 	}
@@ -43,7 +41,7 @@ main {
 		}
 
 	.navbar .nav-link {
-		color: #333 !important;
+		color: #fff !important; /* Link text color */
 		font-weight: bold;
 		margin-right: 20px;
 		position: relative;
@@ -51,7 +49,7 @@ main {
 
 		.navbar .nav-link:hover,
 		.navbar .nav-link.active {
-			color: #000 !important;
+			color: #ddd !important; /* Link hover color */
 		}
 
 		.navbar .nav-link:not(.dropdown-toggle)::after {
@@ -127,30 +125,37 @@ body {
 }
 
 .footer {
-	background-color: #fff;
+	background-color: #333;
 	padding: 20px 0;
 	text-align: center;
-	color: #333;
+	color: #FFD700;
 	box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-	position: relative;
-	bottom: 0;
-	width: 100%;
-	margin-top: 10px;
 }
 
 	.footer a {
-		color: #00509e;
+		color: #FFD700;
 		text-decoration: none;
 		margin: 0 10px;
 	}
 
 		.footer a:hover {
-			color: #003f7d;
+			color: #FFF;
 			text-decoration: underline;
 		}
 
+.image-container {
+	display: flex;
+	justify-content: center;
+	margin: 20px 0;
+}
+
+	.image-container img {
+		max-width: 100%;
+		height: auto;
+	}
+
 /* Media Queries for Responsive Design */
-@media (max-width: 992px) {
+@@media (max-width: 992px) {
 	.navbar-collapse {
 		justify-content: flex-start;
 	}
