--- a/ProjectDiamondShop/Content/Introduce/Marquise.css
+++ b/ProjectDiamondShop/Content/Introduce/Marquise.css
@@ -1,9 +1,9 @@
-﻿
-/* General Styles */
+﻿/* General Styles */
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
 }
 
 body {
