--- a/ProjectDiamondShop/Content/Introduce/Oval.css
+++ b/ProjectDiamondShop/Content/Introduce/Oval.css
@@ -148,6 +148,18 @@ body {
 			text-decoration: underline;
 		}
 
+/* Centering Images */
+.image-container {
+	text-align: center;
+	margin: 20px 0;
+}
+
+	.image-container img {
+		display: inline-block;
+		max-width: 100%;
+		height: auto;
+	}
+
 /* Media Queries for Responsive Design */
 @@media (max-width: 992px) {
 	.navbar-collapse {
