--- a/ProjectDiamondShop/Content/Introduce/Round.css
+++ b/ProjectDiamondShop/Content/Introduce/Round.css
@@ -1,5 +1,4 @@
-﻿
-/* General Styles */
+﻿/* General Styles */
 * {
 	margin: 0;
 	padding: 0;
@@ -170,3 +169,4 @@ body {
 		margin-bottom: 10px;
 	}
 }
+
