--- a/ProjectDiamondShop/Views/Home/HomePage.cshtml
+++ b/ProjectDiamondShop/Views/Home/HomePage.cshtml
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Content/HomePage.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Playwrite+NG+Modern:wght@100..400&family=Playwrite+US+Trad&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&family=Playwrite+ES:wght@100..400&display=swap" rel="stylesheet">
+    <link href="~/Content/HomePage.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -40,6 +44,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCart">
                                 <li><a class="dropdown-item" href="@Url.Action("Index", "Cart")">View Cart</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -48,9 +53,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                                 <li><a class="dropdown-item" href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("WarrantyDetails", "Warranty")">Warranty</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("ViewWarranty", "Warranty")">View Warranty</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("Logout", "Login")">Logout</a></li>
                             </ul>
                         </li>
@@ -177,7 +180,7 @@
                             <!-- Widget -->
                             <div class="widget pt-20 pb-20" data-pagebuilder="widget" data-widget-index="1">
                                 <h2 class="w-100 d-block text-center h2 mb-4" data-widget-element="widgetHeader" data-pagebuilder="element">DIAMOND SEARCH</h2>
-                                <p class="w-100 d-block text-center mb-" data-widget-element="widgetParagraph" data-pagebuilder="element">Diamonds come in many different shapes and cuts, each with its own style and story. Start your own story with your own diamond.</p>
+                                <p class="w-100 d-block text-center mb-" data-widget-element="widgetParagraph" data-pagebuilder="element" style="font-family:'Playwrite NG Modern', cursive;">Diamonds come in many different shapes and cuts, each with its own style and story. Start your own story with your own diamond.</p>
                                 <div class="diamond-search-icons">
                                     @foreach (var diamondShape in diamondShapes)
                                     {
@@ -264,11 +267,15 @@
             $('#loginSuccessModal').modal('hide');
         });
 
-            $('#modalOkButton').click(function () {
-                console.log('OK button clicked');
-                $('#loginSuccessModal').modal('hide');
-            });
+        $('#modalOkButton').click(function () {
+            console.log('OK button clicked');
+            $('#loginSuccessModal').modal('hide');
+        });
 
+        $('#modalOkButton').click(function () {
+            console.log('OK button clicked')
+            $('#loginSuccessModal').modal('hide');
+        });
     </script>
 </body>
 </html>
