--- a/ProjectDiamondShop/Views/Introduce/Cushion.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Cushion.cshtml
@@ -1,16 +1,14 @@
-﻿@{
-    ViewBag.Title = "Cushion Diamond";
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>@ViewBag.Title</title>
+    <title>The Diamond Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Content/Introduce/Cushion.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&family=Playwrite+ES:wght@100..400&display=swap" rel="stylesheet">
+    <link href="~/Content/Introduce/Cushion.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -127,16 +125,16 @@
 
         <div class="container center">
             <div class="row">
-                <p class="decription justify">
+                <p class="description justify">
                     The cushion cut diamond, gaining immense popularity over recent years, characterized by its soft square or rectangular shape with rounded edges, reminiscent of a pillow.
                     Understanding the nuances between standard and modified cushion cuts, as well as their distinct appearances, is crucial for an informed purchase.
                     When shopping for a cushion cut diamond, a general guideline is to stick with a depth and table under 70%.
                     Cushion cuts also retain color more than other shapes, so look for an H color or better when the diamond is set in platinum, white gold, or silver.
-                    A one carat cushion cut costs $2,500 based on our quality recommendation.
+                    A one carat cushion cut costs $2,500 based of our quality recommendation.
                     We’ll discuss all the nuances of cushion cut diamonds and how to navigate the 4 Cs to find the perfect balance of quality and value.
                 </p>
                 <h1>What is a Cushion Cut Diamond?</h1>
-                <p class="decription justify">
+                <p class="description justify">
                     A cushion cut diamond is a combination of a more modern and round brilliant cut pattern diamond with a classic, old mine facet pattern diamond cut.
                     This type of diamond typically has a soft square or even rectangular shape, all with curved edges.
                     Simply put, a cushion cut diamond combines a square cut with rounded corners, giving it an appearance similar to a pillow.
@@ -149,7 +147,7 @@
                 </p>
                 <img src="~/Image/Introlmage/cushion-compare.jpg" alt="Cushion Diamond" style="width: 40%;margin:auto" />
                 <h2 class="wp-block-heading">Key Features of a Cushion Cut Diamond</h2>
-                <p class="decription">
+                <p class="description">
                     Here are some of the distinctive features that you’ll notice from a cushion cut diamond.
                 </p>
                 <ul class="custom-list">
@@ -161,11 +159,11 @@
                 </ul>
                 <img src="~/Image/Introlmage/cushion2.png" alt="Cushion Diamond" style="width: 50%;margin:auto" />
                 <h2 class="wp-block-heading" id="Why-Are-Round-Diamond-Engagement-Rings-So-Popular?">How to Choose a Cushion Cut Diamond</h2>
-                <p class="decription">
+                <p class="description">
                     Looking for a cushion cut? Below, I’ve covered the key factors to look for when buying or comparing cushion cut diamonds, from color to clarity.
                 </p>
                 <h3 class="wp-block-heading">Cushion Diamond Color</h3>
-                <p class="decription justify">
+                <p class="description justify">
                     Cushion cuts are one of the worst shapes when it comes to retaining <a href="https://www.diamonds.pro/education/color/" data-wpel-link="internal">diamond color</a>
                     (or one of the best, if you’re a manufacturer of fancy color diamonds). Cushion cuts are one of the worst shapes when it comes to retaining diamond color (or one of the best, if you’re a manufacturer of fancy color diamonds).
                     Cushions and radiants are the two most common diamond shapes in the fancy color diamond market. These shapes are on the opposite end of the spectrum from rounds, which are the best at masking their color.
@@ -174,7 +172,7 @@
                     Although H diamonds aren’t completely colorless, they are “near colorless” and only have a very slight yellow tint. Almost no one will notice this difference, especially if the diamond is set in rose or yellow gold.
                 </p>
                 <h3 class="wp-block-heading">Cushion Diamond Clarity</h3>
-                <p class="decription justify">
+                <p class="description justify">
                     Regarding <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity</a>, a cushion cut can be a bit tricky.
                     Firstly, it’s important to note whether you’re looking to buy a crushed-ice cushion or an “antique” cushion.
                     The reason is simply that the crushed-ice look, in any shape diamond, is generally a very good hider of inclusions.
