--- a/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
+++ b/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
@@ -6,9 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES+Deco:wght@100..400&family=Playwrite+ES:wght@100..400&display=swap" rel="stylesheet">
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            /*            font-family: 'Montserrat', sans-serif;*/
+        }
+
         .navbar {
-            background: #fff !important;
+            background: #333 !important; /* Thay đổi màu nền */
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
             margin-bottom: 20px;
@@ -17,8 +26,9 @@
         }
 
             .navbar .navbar-brand {
-                color: #28a745 !important;
+                color: #FFFF99 !important;
                 font-weight: bold;
+                font-family: "Playwrite ES Deco", cursive;
                 display: flex;
                 align-items: center;
             }
@@ -30,7 +40,7 @@
                 }
 
             .navbar .nav-link {
-                color: #333 !important;
+                color: #fff !important; /* Thay đổi màu chữ */
                 font-weight: bold;
                 margin-right: 20px;
                 position: relative;
@@ -38,7 +48,7 @@
 
                 .navbar .nav-link:hover,
                 .navbar .nav-link.active {
-                    color: #000 !important;
+                    color: #ddd !important; /* Thay đổi màu chữ khi hover */
                 }
 
                 .navbar .nav-link:not(.dropdown-toggle)::after {
@@ -116,7 +126,8 @@
         body {
             display: flex;
             flex-direction: column;
-            background-color: #fff;
+            background-color: #222; /* Thay đổi màu nền */
+            color: #fff; /* Thay đổi màu chữ */
         }
 
         .container {
@@ -124,10 +135,10 @@
         }
 
         .footer {
-            background-color: #fff;
+            background-color: #333;
             padding: 20px 0;
             text-align: center;
-            color: #333;
+            color: #fff;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
             position: relative;
             bottom: 0;
@@ -135,13 +146,13 @@
         }
 
             .footer a {
-                color: #00509e;
+                color: #28a745;
                 text-decoration: none;
                 margin: 0 10px;
             }
 
                 .footer a:hover {
-                    color: #003f7d;
+                    color: #218838;
                     text-decoration: underline;
                 }
 
@@ -179,8 +190,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index", "Home")">Home</a>
                     </li>
@@ -201,6 +212,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCart">
                                 <li><a class="dropdown-item" href="@Url.Action("Index", "Cart")">View Cart</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -209,9 +221,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                                 <li><a class="dropdown-item" href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("WarrantyDetails", "Warranty")">Warranty</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("ViewWarranty", "Warranty")">View Warranty</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("Logout", "Login")">Logout</a></li>
                             </ul>
                         </li>
